--- a/computec.html
+++ b/computec.html
@@ -121,6 +121,17 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
       <p>En un mundo cada vez más digital, las habilidades en tecnología de la información son esenciales. Nuestro programa te prepara para una carrera exitosa en el sector tecnológico con prácticas reales y profesores experimentados.</p>
     </div>
 
+    <!-- Redes Sociales -->
+    <div class="info-card">
+      <h3><i class="fas fa-share-alt"></i>Redes Sociales</h3>
+      <p>Síguenos en nuestras redes sociales para más información y actualizaciones:</p>
+      <ul class="feature-list">
+       <li><a href="https://www.facebook.com/profile.php?id=61555610825136" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+        
+        
+      </ul>
+    </div>
+
     <!-- Back Button -->
     <div class="text-center">
       <a href="index.html" class="btn-back">
