--- a/mercadeo.html
+++ b/mercadeo.html
@@ -31,8 +31,8 @@
   <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1><i class="fas fa-chart-line me-3"></i>Programa de Mercadeo</h1>
-      <p class="lead">Marketing y Estrategias Comerciales</p>
+      <h1><i class="fas fa-chart-line me-3"></i>Programa de Administración de Empresas</h1>
+      <p class="lead">Especialidad: Representante de Ventas y Servicios Empresariales</p>
       <button class="btn btn-outline-primary">3 años académicos de Mercadeo</button>
     </div>
   </section>
@@ -43,8 +43,8 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p><strong><i class="fas fa-bullseye"></i> Misión:</strong> Promover actividades que sirvan para desarrollar líderes en los amplios y prometedores campos del mercadeo, la gerencia y el empresarismo.</p>
-      <p><strong><i class="fas fa-lightbulb"></i> Visión:</strong> Fomentar la formación integral del estudiante mediante su participación en actividades educativas que desarrollen liderazgo, creatividad e iniciativa.</p>
+      <p><strong><i class="fas fa-bullseye"></i> Misión:</strong> Formar estudiantes con las competencias necesarias para desempeñarse con excelencia en ventas, servicio al cliente y áreas relacionadas al mercadeo, fomentando liderazgo, iniciativa, ética profesional y responsabilidad.</p>
+      <p><strong><i class="fas fa-lightbulb"></i> Visión:</strong> Ser un programa líder en la preparación de estudiantes técnicos altamente competentes, capaces de integrarse al mercado laboral o continuar estudios en áreas empresariales con una base sólida en mercadeo, ventas y servicio.</p>
       <p><i class="fas fa-hands-helping"></i> Fortalecer el espíritu de servicio y la conciencia cívica del estudiante para que sea más sensible y solidario con los demás.</p>
     </div>
 
@@ -52,15 +52,11 @@
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Ser graduado de noveno grado.</li>
-        <li><i class="fas fa-chart-line"></i>Índice académico mínimo de 2.00 puntos.</li>
-        <li><i class="fas fa-clipboard-list"></i>Completar solicitud de ingreso al programa.</li>
-        <li><i class="fas fa-comments"></i>Participar en entrevista de admisión.</li>
-        <li><i class="fas fa-heart"></i>Demostrar verdadero interés en el mundo de los negocios.</li>
-        <li><i class="fas fa-calculator"></i>Poseer buenas destrezas de matemáticas.</li>
-        <li><i class="fas fa-calendar-check"></i>Buena asistencia escolar.</li>
-        <li><i class="fas fa-signature"></i>Tener consentimiento de los padres.</li>
-        <li><i class="fas fa-star"></i>Mostrar habilidades como responsabilidad, iniciativa, entusiasmo y actitud positiva.</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio general mínimo de 2.00</li>
+        <li><i class="fas fa-chart-line"></i>Buena conducta y disposición para el trabajo en equipo</li>
+        <li><i class="fas fa-clipboard-list"></i>Interés en ventas, servicio al cliente o negocios</li>
+        <li><i class="fas fa-comments"></i> Ingresar al programa desde noveno grado</li>
+        
       </ul>
     </div>
 
@@ -74,7 +70,7 @@
 
     <!-- Cursos Principales -->
     <div class="info-card">
-      <h3><i class="fas fa-book"></i>Cursos Principales</h3>
+      <h3><i class="fas fa-book"></i>Áreas de adiestramiento</h3>
       <ul class="feature-list text-center">
         <li><i class="fas fa-handshake"></i>Ventas y Servicio al Cliente</li>
         <li><i class="fas fa-shopping-cart"></i>Compras</li>
@@ -86,32 +82,48 @@
         <li><i class="fas fa-chart-line"></i>Promoción de Ventas</li>
         <li><i class="fas fa-palette"></i>Envoltura Artística</li>
         <li><i class="fas fa-cash-register"></i>Manejo de Caja Registradora</li>
+        <li><i class="fas fa-mobile-alt"></i>Mercadeo Digital</li>
       </ul>
     </div>
 
     <!-- Empleo -->
     <div class="info-card">
       <h3><i class="fas fa-briefcase"></i>Oportunidades de Empleo</h3>
-      <p><i class="fas fa-store"></i> El estudiante que se adiestra en
-mercadeo puede trabajar en diversos
-establecimientos comerciales tales
-como: Ventas directas, Tiendas por
-Departamentos, Almacenes.</p>
-
-
-<p><i class="fas fa-store"></i>Tiene la gran oportunidad de trabajar
-como cajeros(as), decoradores(as) de
-vitrinas, vendedores de productos al
-por mayor y al detal, vendedor de
-servicios, negocio propio, gerente de
-pequeños negocios y ejecutivo de
-ventas.</p>
+<p><strong>Estudiantes que completan esta especialidad pueden desempeñarse en áreas como:</strong> </p>
+      <ul class="feature-list text-center">
+        <li><i class="fas fa-handshake"></i>Representante de ventas</li>
+        <li><i class="fas fa-shopping-cart"></i>Asociado de servicio al cliente</li>
+        <li><i class="fas fa-calculator"></i>Cajero/a</li>
+        <li><i class="fas fa-ad"></i>Promotor o merchandiser</li>
+        <li><i class="fas fa-users"></i>Auxiliar de oficina o asistente de mercadeo</li>
+        <li><i class="fas fa-box"></i>Empleos en tiendas por departamento, supermercados y empresas de servicios</li>
+        <li><i class="fas fa-cogs"></i>Posiciones iniciales en publicidad, inventario y ventas digitales</li>
+      </ul>
     </div>
 
-    <!-- Por qué elegir -->
-    <div class="highlight-box">
-      <h4><i class="fas fa-star"></i>¿Por qué elegir Mercadeo?</h4>
-      <p><i class="fas fa-bullhorn"></i> En un mundo competitivo, el marketing es clave para el éxito empresarial. Aprenderás a crear estrategias efectivas, analizar mercados y conectar con los consumidores para impulsar el crecimiento de las empresas.</p>
+       <!-- Cursos Principales -->
+    <div class="info-card">
+      <h3><i class="fas fa-book"></i>¿Por qué elegir Mercadeo?</h3>
+      <ul class="feature-list text-center">
+        <li><i class="fas fa-handshake"></i>Es un taller dinámico, práctico y centrado en experiencias reales</li>
+        <li><i class="fas fa-shopping-cart"></i>Desarrolla destrezas esenciales que buscan todos los patrones</li>
+        <li><i class="fas fa-calculator"></i>Fortalece la comunicación, seguridad personal y liderazgo</li>
+        <li><i class="fas fa-ad"></i>Prepara para competencias y certificaciones a través de DECA</li>
+        <li><i class="fas fa-users"></i>Permite participar activamente en la Cooperativa Juvenil</li>
+        <li><i class="fas fa-box"></i>Amplía las oportunidades de empleo y estudios universitarios</li>
+        <li><i class="fas fa-cogs"></i>Forma estudiantes creativos, proactivos y preparados para el mundo laboral</li>
+
+    </div>
+
+    <!-- Redes Sociales -->
+    <div class="info-card">
+      <h3><i class="fas fa-share-alt"></i>Redes Sociales</h3>
+      <p>Síguenos en nuestras redes sociales para más información y actualizaciones:</p>
+      <ul class="feature-list">
+        <li><a href="https://www.facebook.com/profile.php?id=100086953602999" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+            <li><a href="https://www.instagram.com/deca.pcb" target="_blank"><i class="fab fa-facebook"></i> Instagram</a></li>
+        
+      </ul>
     </div>
 
     <!-- Volver -->
